Add opa release to blobstore

--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,3 +1,4 @@
-opa-0.8.1:
-  size: 16927434
-  sha: eaa10d06b5bc581c65c5db5eeda6e11e9a372dfb
+opa:
+  size: 17577088
+  object_id: cf3bb237-1ee3-436d-5bfd-64c25d050a18
+  sha: 62fecdd70b5fece8896944d7ef547241a3cb10e9
