--- a/config/final.yml
+++ b/config/final.yml
@@ -1,1 +1,8 @@
-name: opa
+---
+final_name: opa
+blobstore:
+  provider: s3
+  options:
+    bucket_name: opa-release-blobs
+    region: europe-west3
+    host: storage.googleapis.com
