add support of optional config file, add support to specify a rego file

--- a/config/final.yml
+++ b/config/final.yml
@@ -1,8 +1,6 @@
 ---
 final_name: opa
 blobstore:
-  provider: s3
+  provider: local
   options:
-    bucket_name: opa-release-blobs
-    region: europe-west3
-    host: storage.googleapis.com
+    blobstore_path: /tmp/test-blobs
